# converso-chatbot

./: .env.example  .gitignore  README.md  client_secret_example.json  docker-compose.yaml  pylint.rc  setup-dev.sh  skaffold.yaml
.docker/: converso.Dockerfile  converso_chatbot.Dockerfile  converso_telegram_bot.Dockerfile
converso_chatbot/: pyproject.toml
converso_chatbot/converso_chatbot/: helpers.py  main.py
converso_chatbot/converso_chatbot/clients/: __init__.py  google.py  google_search.py
converso_chatbot/converso_chatbot/clients/rabbitmq/: __init__.py  rabbitmq_consumer.py
converso_chatbot/converso_chatbot/constants/: message_queues.py  redis_keys.py
converso_chatbot/converso_chatbot/controllers/: __init__.py  conversations.py  google_actions.py  google_login.py
converso_chatbot/converso_chatbot/conversational_engine/: __init__.py  message_consumer.py  tool_callback_handler.py
converso_chatbot/converso_chatbot/conversational_engine/form_agent/: __init__.py  memory.py
converso_chatbot/converso_chatbot/conversational_engine/tools/: python_code_interpreter.py
converso_chatbot/converso_chatbot/conversational_engine/tools/google/calendar/: creator.py  retriever.py
converso_chatbot/converso_chatbot/conversational_engine/tools/google/gmail/: retriever.py  sender.py
converso_chatbot/converso_chatbot/conversational_engine/tools/google/search/: __init__.py  search.py
converso_chatbot/tests/behavioural/: base.py  chain.py
converso_chatbot/tests/unit/clients/: test_google.py  test_google_search.py
converso_telegram_bot/: pyproject.toml
converso_telegram_bot/converso_telegram_bot/: __init__.py  consumer.py  main.py
converso_telegram_bot/converso_telegram_bot/bot/: __init__.py  bot.py  handler.py
converso_telegram_bot/converso_telegram_bot/clients/: __init__.py  converso.py  converso_chatbot.py  redis.py
converso_telegram_bot/converso_telegram_bot/clients/rabbitmq/: constants.py  rabbitmq_producer.py
converso_telegram_bot/converso_telegram_bot/constants/: __init__.py  emojis.py  message_queues.py  message_type.py
(+101 files in other folders)
